layout Login responsiveness

--- a/app/src/main/res/layout-normal/login_form.xml
+++ b/app/src/main/res/layout-normal/login_form.xml
@@ -24,151 +24,168 @@
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:src="@drawable/food4" />
-
     </com.github.florent37.shapeofview.shapes.ArcView>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/usename"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="25dp"
-        android:hint="@string/hintUsername"
-        android:textColorHint="@color/grey"
-        android:theme="@style/TextInputLayoutAppearance"
-        app:boxStrokeColor="@color/shadowblue"
-        app:endIconTint="@color/red"
-        app:errorContentDescription="must not be empty"
-        app:errorEnabled="true"
-        app:errorIconDrawable="@drawable/ic_report_black_24dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image"
-        app:layout_constraintWidth_percent="0.7">
+        android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/userName"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/usename"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/grey"
-            android:textSize="16sp" />
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="25dp"
+            android:hint="@string/hintUsername"
+            android:textColorHint="@color/grey"
+            android:theme="@style/TextInputLayoutAppearance"
+            app:boxStrokeColor="@color/shadowblue"
+            app:endIconTint="@color/red"
+            app:errorContentDescription="must not be empty"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@drawable/ic_report_black_24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.7">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/userName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:hint="@string/hintPassword"
-        android:textColorHint="@color/grey"
-        android:theme="@style/TextInputLayoutAppearance"
-        app:boxCornerRadiusBottomEnd="4dp"
-        app:boxCornerRadiusBottomStart="4dp"
-        app:endIconDrawable="@drawable/ic_report_black_24dp"
-        app:endIconMode="custom"
-        app:endIconTint="@color/shadowblue"
-        app:errorEnabled="true"
-        app:errorIconDrawable="@drawable/ic_report_black_24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/usename"
-        app:layout_constraintWidth_percent="0.7">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passWord"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/shadowblue"
-            android:inputType="textPassword"
-            android:textColor="@color/grey"
-            android:textSize="16sp" />
+            android:layout_marginTop="5dp"
+            android:hint="@string/hintPassword"
+            android:textColorHint="@color/grey"
+            android:theme="@style/TextInputLayoutAppearance"
+            app:boxCornerRadiusBottomEnd="4dp"
+            app:boxCornerRadiusBottomStart="4dp"
+            app:endIconDrawable="@drawable/ic_report_black_24dp"
+            app:endIconMode="custom"
+            app:endIconTint="@color/shadowblue"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@drawable/ic_report_black_24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/usename"
+            app:layout_constraintWidth_percent="0.7">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passWord"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/shadowblue"
+                android:inputType="textPassword"
+                android:textColor="@color/grey"
+                android:textSize="16sp" />
 
-    <RelativeLayout
-        android:id="@+id/signup"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
-        app:layout_constraintWidth_percent="0.65">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/signupText"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/signup"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:text="Sign Up"
-            android:textColor="@color/blue"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
+            app:layout_constraintWidth_percent="0.65">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="Forgot password?"
-            android:textColor="@color/gray"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/signupText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:text="Sign Up"
+                android:textColor="@color/blue"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="Forgot password?"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/shape_error_bg"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup"
-        app:layout_constraintWidth_percent="0.7">
+        </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/login_error"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="5dp"
-            android:visibility="gone">
+            android:layout_marginTop="15dp"
+            android:background="@drawable/shape_error_bg"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/signup"
+            app:layout_constraintWidth_percent="0.7">
 
-            <ImageView
+            <LinearLayout
+                android:id="@+id/login_error"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_report_black_24dp"
-                android:tint="@color/white" />
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:visibility="gone">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/error_login"
-                android:textColor="@color/white" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_report_black_24dp"
+                    android:tint="@color/white" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/error_login"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/login_button"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="80dp"
-        android:backgroundTint="@color/shadowblue"
-        android:text="@string/loginTet"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:elevation="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup"
-        app:layout_constraintWidth_percent="0.5" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/login_button"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="80dp"
+            android:backgroundTint="@color/shadowblue"
+            android:text="@string/loginTet"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:elevation="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.07"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/signup"
+            app:layout_constraintWidth_percent="0.5" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
