--- a/app/src/main/res/layout-small/login_form.xml
+++ b/app/src/main/res/layout-small/login_form.xml
@@ -33,6 +33,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,7 +48,7 @@
                 android:theme="@style/TextInputLayoutAppearance"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="25dp"
                 android:layout_marginEnd="25dp"
                 android:layout_width="0dp"
