--- a/app/src/main/res/layout-normal/login_form.xml
+++ b/app/src/main/res/layout-normal/login_form.xml
@@ -172,7 +172,7 @@
             android:id="@+id/login_button"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:backgroundTint="@color/shadowblue"
             android:text="@string/loginTet"
@@ -180,8 +180,9 @@
             android:textColor="@color/white"
             android:textSize="18sp"
             app:elevation="8dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.07"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/signup"
             app:layout_constraintWidth_percent="0.5" />
