--- a/app/src/main/res/layout-normal/login_form.xml
+++ b/app/src/main/res/layout-normal/login_form.xml
@@ -140,6 +140,8 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/shape_error_bg"
             android:orientation="horizontal"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/signup"
