--- a/app/src/main/res/anim/layout_animation.xml
+++ b/app/src/main/res/anim/layout_animation.xml
@@ -3,5 +3,4 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:animation="@anim/item_animation"
     android:delay="15%"
-    android:animationOrder="normal"
-    />
+    android:animationOrder="normal"/>
