--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="anim_duration_medium">7</integer>
     <integer name="anim_duration_minumum">5</integer>
+    <integer name="anim_duration_maximum">9</integer>
 </resources>
